@@ -201,7 +201,7 @@ fi
 
 dnl gstreamer devel deps
 if test "x$enable_gst_10" = "xyes"; then
-	GSTREAMER_REQUIRED_VERSION=0.10.2
+	GSTREAMER_REQUIRED_VERSION=0.10.3
 	AC_SUBST(GSTREAMER_REQUIRED_VERSION)
 	PKG_CHECK_MODULES(GST,
 		gstreamer-0.10 >= $GSTREAMER_REQUIRED_VERSION
